--- a/index.html
+++ b/index.html
@@ -12,29 +12,107 @@
 </header>
 
 <body>
-    <div id="pickText">
-        <span>Pick a guard style to study</span>
+    <div id="belt"><svg fill="#000000" height="100px" width="100px" version="1.1" id="Layer_1"
+            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 501.999 501.999"
+            xml:space="preserve">
+            <g>
+                <g>
+                    <g>
+                        <path d="M414.24,117.039C370.145,103.348,312.172,95.808,251,95.808s-119.146,7.541-163.24,21.232
+                   C15.226,139.562,0,173.313,0,197.664c0,24.349,15.226,58.102,87.76,80.624c27.453,8.524,60.43,14.7,96.419,18.125l-50.555,50.555
+                   c-13.526,13.527-13.526,35.537,0,49.063c6.553,6.552,15.265,10.161,24.531,10.161c9.266,0,17.979-3.608,24.532-10.161
+                   l67.325-67.325l43.62,43.621c6.554,6.552,15.266,10.161,24.531,10.161c9.267,0,17.979-3.609,24.531-10.162
+                   c13.525-13.526,13.525-35.536,0-49.063l-26.686-26.686c36.692-3.388,70.318-9.622,98.231-18.289
+                   c72.534-22.522,87.76-56.275,87.76-80.624S486.774,139.562,414.24,117.039z M93.691,259.188
+                   C45.482,244.219,20,222.943,20,197.664c0-25.28,25.482-46.555,73.691-61.523c42.227-13.112,98.093-20.333,157.309-20.333
+                   s115.082,7.221,157.309,20.333h0.001c25.871,8.033,45.187,17.884,57.542,29.193l-22.676,19.187
+                   c-7.879-6.183-22.983-14.686-51.528-22.657c-38.494-10.751-88.444-16.671-140.648-16.671c-52.205,0-102.155,5.92-140.65,16.671
+                   c-45.168,12.615-56.705,26.563-59.165,30.538c-1.996,3.225-1.996,7.301,0,10.525c2.46,3.975,13.996,17.922,59.165,30.538
+                   c25.124,7.017,55.444,12.04,88.179,14.634v29.473C159.029,274.591,122.971,268.279,93.691,259.188z M427.181,197.659
+                   c-6.555,4.214-18.876,10.388-40.911,16.542c-23.944,6.686-53.016,11.475-84.53,13.963c-4.116-11.504-15.121-19.759-28.023-19.759
+                   h-45.434c-12.901,0-23.906,8.255-28.022,19.759c-31.515-2.488-60.588-7.277-84.531-13.963
+                   c-22.047-6.158-34.369-12.334-40.911-16.533c6.554-4.213,18.876-10.388,40.911-16.542c36.792-10.275,84.832-15.934,135.27-15.934
+                   s98.477,5.659,135.27,15.934C408.317,187.284,420.639,193.461,427.181,197.659z M168.545,381.888
+                   c-2.775,2.775-6.465,4.303-10.39,4.303c-3.925,0-7.614-1.528-10.389-4.303c-5.729-5.729-5.729-15.05,0-20.778l55.499-55.499
+                   l0.003-0.011c5.301,8.217,14.529,13.673,25.014,13.673h2.877L168.545,381.888z M228.283,299.274L228.283,299.274
+                   c-5.002-0.001-9.132-3.787-9.686-8.644l24.165-24.165c3.905-3.905,3.905-10.237,0-14.143c-3.905-3.905-10.237-3.905-14.143,0
+                   l-10.09,10.09v-23.623v-0.63c0-5.378,4.375-9.754,9.754-9.754h45.434c5.379,0,9.755,4.375,9.755,9.754v0.63v49.479v1.252
+                   c0,5.378-4.376,9.754-9.755,9.754H228.283z M328.553,337.404c5.728,5.729,5.728,15.051,0,20.779
+                   c-2.775,2.775-6.465,4.304-10.389,4.304s-7.614-1.529-10.39-4.303l-38.909-38.91h4.852c9.976,0,18.815-4.94,24.216-12.497
+                   l0.003,0.01L328.553,337.404z M408.309,259.188c-29.279,9.092-65.338,15.404-104.837,18.384v-29.473
+                   c32.734-2.594,63.055-7.618,88.177-14.634c34.105-9.525,49.03-19.807,55.357-25.985l31.105-26.32
+                   c2.574,5.28,3.889,10.789,3.889,16.505C482,222.943,456.519,244.218,408.309,259.188z" />
+                        <path d="M67.187,173.461c4.833-2.672,6.585-8.757,3.913-13.59c-2.673-4.833-8.756-6.584-13.59-3.913
+                   c-8.403,4.646-15.292,9.671-20.477,14.934c-3.876,3.935-3.828,10.266,0.106,14.142c1.948,1.919,4.483,2.876,7.017,2.876
+                   c2.584,0,5.168-0.996,7.125-2.982C55.115,181.034,60.467,177.177,67.187,173.461z" />
+                        <path d="M97.903,160.128c0.984,0,1.986-0.146,2.976-0.455c21.417-6.667,47.764-11.909,76.191-15.158
+                   c5.487-0.627,9.427-5.584,8.8-11.071c-0.627-5.487-5.583-9.428-11.071-8.8c-30.078,3.438-56.948,8.798-79.866,15.933
+                   c-5.273,1.642-8.217,7.247-6.575,12.521C89.691,157.382,93.641,160.128,97.903,160.128z" />
+                    </g>
+                </g>
+            </g>
+        </svg></div>
+    <div id="navbar">
+        <div class="navElement" id="home">
+            <a><svg fill="#000000" width="77px" height="50px" viewBox="0 0 48 48" enable-background="new 0 0 48 48"
+                    id="Layer_1" version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink">
+
+                    <g>
+
+                        <g>
+
+                            <path
+                                d="M35.434,40.904H13.381c-0.553,0-1-0.447-1-1v-14.96l-1.7,1.451c-0.347,0.295-0.846,0.319-1.218,0.062l-3.217-2.223    c-0.253-0.174-0.411-0.455-0.43-0.762s0.104-0.604,0.334-0.809L23.233,7.493c0.374-0.333,0.936-0.337,1.315-0.011l17.288,14.852    c0.235,0.202,0.363,0.501,0.348,0.811c-0.017,0.309-0.175,0.593-0.429,0.77l-3.231,2.246c-0.367,0.254-0.861,0.235-1.208-0.051    l-0.582-0.481c-0.14,0.562-0.267,1.094-0.273,1.589c-0.043,3.077-0.037,6.097-0.031,9.294l0.005,3.394    C36.434,40.457,35.986,40.904,35.434,40.904z M14.381,38.904h20.051l-0.004-2.39c-0.006-3.205-0.012-6.232,0.031-9.325    c0.011-0.754,0.187-1.458,0.356-2.139c0.069-0.278,0.14-0.557,0.195-0.836c0-0.004,0.001-0.007,0.002-0.011l-11.197-9.266    l-9.436,8.153V38.904z M8.432,23.313l1.535,1.062l2.485-2.12c0.002-0.002,0.004-0.004,0.006-0.006    c0.06-0.141,0.15-0.269,0.27-0.371l10.421-9.006c0.372-0.318,0.916-0.324,1.292-0.014l13.565,11.226l1.547-1.075L23.908,9.569    L8.432,23.313z" />
+
+                        </g>
+
+                        <g>
+
+                            <path
+                                d="M13.938,17.594c-0.498,0-0.929-0.371-0.991-0.877l-1.019-8.235c-0.035-0.285,0.053-0.57,0.243-0.785    c0.189-0.215,0.463-0.338,0.749-0.338h4.403c0.459,0,0.859,0.313,0.97,0.758l1.082,4.327c0.135,0.535-0.191,1.078-0.728,1.212    s-1.078-0.191-1.212-0.728l-0.893-3.569h-2.492l0.88,7.112c0.068,0.549-0.321,1.048-0.869,1.115    C14.02,17.592,13.979,17.594,13.938,17.594z" />
+
+                        </g>
+
+                        <g>
+
+                            <path
+                                d="M28.037,33.646h-7.378c-0.489,0-0.906-0.354-0.986-0.837l-0.263-1.602c-0.197-1.215-0.388-2.383-0.599-3.547    c-0.365-2.027,0.569-3.519,2.631-4.2c0.151-0.051,0.307-0.063,0.454-0.041c0.045-0.007,0.092-0.01,0.139-0.01h6.002    c0.553,0,1,0.447,1,1v8.236C29.037,33.199,28.59,33.646,28.037,33.646z M21.508,31.646h5.529V25.41h-5.002    c-0.032,0-0.064-0.002-0.097-0.005c-1.169,0.426-1.313,1.046-1.158,1.899c0.213,1.176,0.404,2.355,0.604,3.583L21.508,31.646z" />
+
+                        </g>
+
+                    </g>
+
+                </svg></a>
+        </div>
+        <!-- <div class="navElement"></div>
+        <div class="navElement"></div> -->
     </div>
-
-    <div id="pickContainer">
-
-        <div class="selectionContainer">
-            <div class="selection" id="select1">
-            </div>
-            <div class="selectionText" id="selectionText1">Open Guard</div>
+    <fieldset>
+        <div id="pickText">
+            <span>Pick a guard style to study</span>
         </div>
-        <div class="selectionContainer">
-            <div class="selection" id="select2">
 
-            </div>
-            <div class="selectionText" id="selectionText2">Outside Foot Position</div>
-        </div>
-        <div class="selectionContainer">
-            <div class="selection" id="select3">
+        <div id="pickContainer">
 
+            <div class="selectionContainer">
+                <div class="selection" id="select1">
+                </div>
+                <div class="selectionText" id="selectionText1">Open Guard</div>
             </div>
-            <div class="selectionText" id="selectionText3">Inside Foot Position</div>
+            <div class="selectionContainer">
+                <div class="selection" id="select2">
+
+                </div>
+                <div class="selectionText" id="selectionText2">Outside Foot Position</div>
+            </div>
+            <div class="selectionContainer">
+                <div class="selection" id="select3">
+
+                </div>
+                <div class="selectionText" id="selectionText3">Inside Foot Position</div>
+            </div>
         </div>
-    </div>
+    </fieldset>
     <script src="script.js"></script>
 </body>
