--- a/index.html
+++ b/index.html
@@ -120,12 +120,14 @@
             </div>
         </div>
     </fieldset>
+    <div id="container">
         <div id="textContainer">
             <article>
                 <h1 id="header"></h1>
                 <p id="paragraph"></p>
             </article>
         </div>
+    </div>
     <script src="script.js"></script>
     <footer>Created and Designed by Gwillyn Donaghy</footer>
 </body>
