--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
                 <div class="selection" id="selection2">
 
                 </div>
-                <div class="selectionText" id="selectionText2">Outside Foot Position</div>
+                <div class="selectionText" id="selectionText2">Outside Position</div>
             </div>
             <div class="selectionContainer">
                 <div class="selection" id="selection3">
 
                 </div>
-                <div class="selectionText" id="selectionText3">Inside Foot Position</div>
+                <div class="selectionText" id="selectionText3">Inside Position</div>
             </div>
         </div>
     </fieldset>
